--- a/GadgetZone/src/main/resources/templates/index.html
+++ b/GadgetZone/src/main/resources/templates/index.html
@@ -11,9 +11,10 @@
     <header class="header">
         <nav class="nav">
             <a href="/" class="logo">
+<!--                 <img src="/GadgetZone/src/main/resources/static/images/logo.jpg" alt="Логотип GadgetZone">-->
                 <img th:src="@{/images/logo.jpg}" alt="Логотип GadgetZone" class="logo-img">
-            </a>
-
+            </a>    
+            
             <div class="nav-search">
                 <input type="text" placeholder="Поиск товаров..." class="search-input">
                 <button class="search-button">Найти</button>
@@ -33,7 +34,7 @@
         </nav>
     </header>
 
-<main>
+    <main>
         <div class="product-grid">
             <div th:each="product : ${products}" class="product-card">
                 <img th:src="@{'/images/' + ${product.imageUrl}}" alt="Товар" class="product-img">
